# pyl4c

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  setup.sh
.github/workflows/: python-publish.yml
docs/: build.sh  ease2.html  epsg.html  index.html  science.html  spatial.html  stats.html  towers.html  utils.html
docs/apps/: index.html  nature.html  resample.html
docs/apps/calibration/: index.html  main.html  mcmc.html  nature.html  optimize.html
docs/apps/calibration/extensions/: damm.html  hydrology.html  index.html  phenology.html
docs/apps/l4c/: core.html  index.html  io.html  main.html
docs/apps/l4c/extensions/: cosore.html  coupling.html  damm.html  hydrology.html  index.html  phenology.html
docs/data/: fixtures.html  index.html
docs/lib/: cli.html  index.html  modis.html  netcdf.html  tcf.html  transcom.html  transpiration.html
docs/pyl4c/: epsg.html  index.html  science.html  utils.html
docs/pyl4c/apps/: resample.html
docs/pyl4c/apps/calibration/: main.html
docs/pyl4c/apps/calibration/extensions/: index.html
docs/pyl4c/apps/l4c/extensions/: cosore.html  coupling.html  hydrology.html  index.html
docs/pyl4c/data/: index.html
docs/pyl4c/lib/: cli.html  horizon.html  index.html  modis.html  richards.html  tcf.html  transcom.html
docs/templates/: head.mako  logo.mako
pyl4c/: __init__.py  ease2.py  epsg.py  science.py  spatial.py  stats.py  towers.py  utils.py
pyl4c/apps/: __init__.py  nature.py  resample.py
pyl4c/apps/calibration/: README.md  __init__.py  main.py  mcmc.py  nature.py  optimize.py  optimize2.py  subset.py
pyl4c/apps/calibration/extensions/: README.md  __init__.py  damm.py  hydrology.py  phenology.py
pyl4c/apps/l4c/: README.md  __init__.py  core.py  io.py  main.py
pyl4c/apps/l4c/extensions/: README.md  __init__.py  cosore.py  coupling.py  damm.py  hydrology.py  phenology.py
pyl4c/data/: fixtures.py
pyl4c/data/files/: SMAP_BPLUT_2020-07-31.csv  config_L4C_MCMC_calibration.yaml  config_L4C_MCMC_calibration_V8.yaml  config_L4C_MCMC_calibration_Version8.yaml  config_L4C_calibration.yaml  config_L4C_calibration_V8.yaml  config_calibration.json  prior_L4C_V7_GPP.yaml  prior_L4C_V7_RECO.yaml  prior_L4C_V8_GPP.yaml  prior_L4C_V8_GPP_alternate.yaml
pyl4c/data/files/priors/: prior_L4C_V7_GPP.yaml  prior_L4C_V8.yaml
pyl4c/lib/: __init__.py  cli.py  horizon.py  modis.py  netcdf.py  richards.py  tcf.py  transcom.py
pyl4c/tests/: calibration.py  l4c.py  tests.py  transpiration.py
scripts/: MODIS_raster.py
