[metadata]
name = pyl4c
version = 0.12.0.dev
author = K. Arthur Endsley
author_email = arthur.endsley@ntsg.umt.edu
description = Python tools for working with SMAP L4C data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 2
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS

[options]
packages = pyl4c, pyl4c.data, pyl4c.lib, pyl4c.apps, pyl4c.tests
py_modules = ease2, epsg, spatial, science, stats, towers, utils
python_requires = >=3.5
install_requires =
    numpy>=1.13.3
    scipy>=1.3
    h5py>=2.10.0
    GDAL>=2.2.0
    affine>=2.3.0
    cached_property>=1.5.1

[options.extras_require]
docs = pdoc3>=0.9.2
calibration = nlopt>=2.6.0; netCDF4>=1.5.0; fire>=0.4.0; matplotlib>=2.1.1
cli = fire>=0.4.0; rasterstats>=0.13.1
netcdf = netCDF4>=1.5.0
