[metadata]
name = pyl4c
version = attr: pyl4c.__version__
author = K. Arthur Endsley
author_email = arthur.endsley@ntsg.umt.edu
description = Python tools for working with SMAP L4C data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS

[options]
include_package_data = False
packages = pyl4c, pyl4c.data, pyl4c.lib, pyl4c.apps, pyl4c.apps.calibration, pyl4c.apps.l4c, pyl4c.tests
py_modules = pyl4c.ease2, pyl4c.epsg, pyl4c.spatial, pyl4c.science, pyl4c.stats, pyl4c.towers, pyl4c.utils
python_requires = >=3.5
install_requires =
    numpy>=1.13.3
    scipy>=1.3
    h5py>=2.10.0
    GDAL>=2.2.0
    affine>=2.3.0
    cached_property>=1.5.1
    pyproj>=2.5.0
    PyYAML>=6.0.0

[options.package_data]
* = data/files/*.yaml, data/files/*.json, data/files/*.csv

[options.extras_require]
docs = pdoc3>=0.9.2
calibration = pandas>=2.0.0; nlopt>=2.6.0; netCDF4>=1.5.0; fire>=0.4.0; matplotlib>=2.1.1; pymc>=5.0.0; arviz>=0.12.0; PyYAML>=6.0.0
cli = fire>=0.4.0; rasterstats>=0.13.1
netcdf = netCDF4>=1.5.0
transcom = scikit-image>=0.21.0
